--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "event-stream": "^3.1.4",
     "walk": "^2.3.1",
     "gulp-util": "^2.2.14",
-    "fs-extra": "^0.8.1"
+    "fs-extra": "^0.8.1",
+    "run-sequence": "^0.3.6"
   }
 }
