Adding Gulp Cache to help prevent all sorts of terrible things from happening

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-style-prototype",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Gulp Runners for Style Prototypes",
   "main": "index.js",
   "scripts": {
@@ -35,31 +35,32 @@
   },
   "homepage": "https://github.com/north/gulp-style-prototype",
   "dependencies": {
+    "browser-sync": "^0.8.2",
+    "chalk": "^0.4.0",
     "compass-options": "^0.1.1",
-    "jshint-stylish": "^0.1.5",
-    "js-yaml": "^3.0.2",
-    "gulp-filter": "^0.4.1",
-    "gulp-plumber": "^0.6.1",
+    "event-stream": "^3.1.4",
+    "fs-extra": "^0.8.1",
+    "gulp-cached": "0.0.3",
     "gulp-clean": "^0.2.4",
+    "gulp-filter": "^0.4.1",
+    "gulp-imagemin": "^0.5.0",
+    "gulp-jshint": "^1.5.5",
+    "gulp-minify-css": "^0.3.4",
+    "gulp-plumber": "^0.6.1",
+    "gulp-rev": "^0.4.0",
     "gulp-shell": "^0.2.4",
     "gulp-subtree": "^0.1.0",
-    "gulp-watch": "^0.6.2",
-    "gulp-jshint": "^1.5.5",
-    "browser-sync": "^0.8.2",
-    "path": "^0.4.9",
-    "jsonfile": "^1.1.1",
-    "underscore.string": "^2.3.3",
-    "chalk": "^0.4.0",
-    "event-stream": "^3.1.4",
-    "walk": "^2.3.1",
-    "gulp-util": "^2.2.14",
-    "fs-extra": "^0.8.1",
-    "run-sequence": "^0.3.6",
-    "gulp-minify-css": "^0.3.4",
-    "gulp-rev": "^0.4.0",
-    "gulp-usemin": "^0.3.3",
     "gulp-uglify": "^0.3.0",
-    "gulp-imagemin": "^0.5.0",
-    "imagemin-pngcrush": "^0.1.0"
+    "gulp-usemin": "^0.3.3",
+    "gulp-util": "^2.2.14",
+    "gulp-watch": "^0.6.2",
+    "imagemin-pngcrush": "^0.1.0",
+    "js-yaml": "^3.0.2",
+    "jshint-stylish": "^0.1.5",
+    "jsonfile": "^1.1.1",
+    "path": "^0.4.9",
+    "run-sequence": "^0.3.6",
+    "underscore.string": "^2.3.3",
+    "walk": "^2.3.1"
   }
 }
