--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-style-prototype",
-  "version": "0.6.0",
+  "version": "1.0.0",
   "description": "Gulp Runners for Style Prototypes",
   "main": "index.js",
   "scripts": {
@@ -35,33 +35,26 @@
   },
   "homepage": "https://github.com/north/gulp-style-prototype",
   "dependencies": {
-    "browser-sync": "^0.8.2",
-    "chalk": "^0.4.0",
+    "browser-sync": "^1.3.3",
     "compass-options": "^0.1.1",
-    "event-stream": "^3.1.4",
-    "fs-extra": "^0.8.1",
-    "gulp-cached": "0.0.3",
-    "gulp-clean": "^0.2.4",
-    "gulp-filter": "^0.4.1",
-    "gulp-imagemin": "^0.5.0",
-    "gulp-jshint": "^1.5.5",
-    "gulp-minify-css": "^0.3.4",
-    "gulp-plumber": "^0.6.1",
-    "gulp-rev": "^0.4.0",
-    "gulp-shell": "^0.2.4",
-    "gulp-subtree": "^0.1.0",
-    "gulp-uglify": "^0.3.0",
-    "gulp-usemin": "^0.3.3",
-    "gulp-util": "^2.2.14",
-    "gulp-watch": "^0.6.2",
+    "execSync": "^1.0.1-pre",
+    "fs-extra": "^0.10.0",
+    "gulp-cached": "^1.0.1",
+    "gulp-imagemin": "^0.6.2",
+    "gulp-jshint": "^1.8.4",
+    "gulp-minify-css": "^0.3.7",
+    "gulp-rev": "^1.0.0",
+    "gulp-shell": "^0.2.9",
+    "gulp-uglify": "^0.3.1",
+    "gulp-usemin": "^0.3.7",
+    "gulp-util": "^3.0.0",
     "imagemin-pngcrush": "^0.1.0",
-    "js-yaml": "^3.0.2",
-    "jshint-stylish": "^0.1.5",
-    "jsonfile": "^1.1.1",
+    "jshint-stylish": "^0.4.0",
+    "node-dir": "^0.1.5",
     "path": "^0.4.9",
     "rimraf": "^2.2.8",
     "run-sequence": "^0.3.6",
     "underscore.string": "^2.3.3",
-    "walk": "^2.3.1"
+    "yamljs": "^0.1.5"
   }
 }
