--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "browser-sync": "^1.3.3",
     "compass-options": "^0.1.1",
+    "event-stream": "^3.1.7",
     "execSync": "^1.0.1-pre",
     "fs-extra": "^0.10.0",
     "gulp-cached": "^1.0.1",
