--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-style-prototype",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Gulp Runners for Style Prototypes",
   "main": "index.js",
   "scripts": {
@@ -46,6 +46,7 @@
     "gulp-minify-css": "^0.3.7",
     "gulp-rev": "^1.0.0",
     "gulp-shell": "^0.2.9",
+    "gulp-subtree": "^0.1.0",
     "gulp-uglify": "^0.3.1",
     "gulp-usemin": "^0.3.7",
     "gulp-util": "^3.0.0",
