--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "rimraf": "^2.2.8",
     "run-sequence": "^0.3.6",
     "underscore.string": "^2.3.3",
-    "yamljs": "^0.1.5"
+    "yamljs": "^0.1.5",
+    "yargs": "^1.3.1"
   }
 }
